--- a/frontend/src/css/header-footer.css
+++ b/frontend/src/css/header-footer.css
@@ -4,3 +4,10 @@
         margin-top: "40px";
         border-top: "1px solid #ddd";
 }
+.profile-image {
+    width: 50%;
+    max-width: 100px; /* Adjust the max width as needed */
+    height: auto; /* Keeps the aspect ratio */
+    object-fit: cover; /* Ensures the image covers the area */ /* Makes the image a circle */
+  }
+  
