--- a/frontend/src/css/homeBody.css
+++ b/frontend/src/css/homeBody.css
@@ -1,3 +1,14 @@
+/* categorylist */
+.pop-up-image {
+  transition: transform 0.3s ease-in-out;
+  cursor: pointer; 
+}
+
+.pop-up-image:hover {
+  transform: scale(1.1);
+}
+/*  */
+
 .carousel-container {
   width: 100%;
   height: 10%;
