--- a/frontend/src/css/header-footer.css
+++ b/frontend/src/css/header-footer.css
@@ -1,3 +1,16 @@
+/* Header.css */
+.custom-navbar {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.brand {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  font-size: 1.5rem;
+  color: #007bff !important;
+}
+
 .footer {
   background-color: #f9f9f9;
   padding: 20px 0;
